# rinex2bin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
