[package]
name = "rinex2bin"
version = "0.0.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX to BINEX serialization"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rinex2bin"
keywords = ["rinex", "geo"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
flate2 = "1"
thiserror = "2"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "color"] }
binex = { git = "https://github.com/georust/rinex", branch = "main" }
rinex = { git = "https://github.com/georust/rinex", branch = "main", features = ["flate2", "binex"] }
